<?xml version="1.0"?>
<package>
  <name>ecl_config</name>
  <version>0.50.1</version>
  <description>
     These tools inspect and describe your system with macros, types 
     and functions.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/ecl_config</url>
  <url type="repository">https://github.com/stonier/ecl_lite</url>
  <url type="bugtracker">https://github.com/stonier/ecl_lite/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author> -->

  <build_depend>catkin</build_depend>
  <build_depend>ecl_build</build_depend>
  <build_depend>ecl_license</build_depend>
</package>


