<?xml version="1.0"?>
<package format="2">
  <name>ecl_io</name>
  <version>1.2.0</version>
  <description>
     Most implementations (windows, posix, ...) have slightly different api for
     low level input-output functions. These are gathered here and re-represented
     with a cross platform set of functions.
  </description>
  <author email="d.stonier@gmail.com">Daniel Stonier</author> -->
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/ecl_io</url>
  <url type="repository">https://github.com/stonier/ecl_lite</url>
  <url type="bugtracker">https://github.com/stonier/ecl_lite/issues</url>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <build_depend>ecl_license</build_depend>
  <build_depend>ecl_build</build_depend>
  <build_depend>ecl_config</build_depend>
  <build_depend>ecl_errors</build_depend>
  <exec_depend>ecl_license</exec_depend>
  <exec_depend>ecl_config</exec_depend>
  <exec_depend>ecl_errors</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>


