<package>
  <name>ecl_lite</name>
  <version>0.50.0</version>
  <description>
    Libraries and utilities for embedded and low-level linux development.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://www.ros.org/wiki/ecl_lite</url>
  <url type="repository">https://github.com/stonier/ecl_lite</url>
  <url type="bugtracker">https://github.com/stonier/ecl_lite/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author>

  <build_depend>ecl_tools</build_depend>
  <build_depend>ecl_config</build_depend>
  <build_depend>ecl_converters_lite</build_depend>
  <build_depend>ecl_errors</build_depend>
  <build_depend>ecl_io</build_depend>
  <build_depend>ecl_sigslots_lite</build_depend>
  <build_depend>ecl_time_lite</build_depend>

  <export>
    <metapackage/>
  </export>
</package>
