<?xml version="1.0"?>
<package>
  <name>ecl_sigslots_lite</name>
  <version>0.50.0</version>
  <description>
     This avoids use of dynamic storage (malloc/new) and thread safety (mutexes) to
     provide a very simple sigslots implementation that can be used for *very*
     embedded development.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/ecl_sigslots_lite</url>
  <url type="repository">https://github.com/stonier/ecl_lite</url>
  <url type="bugtracker">https://github.com/stonier/ecl_lite/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author> -->

  <build_depend>catkin</build_depend>
  <build_depend>ecl_license</build_depend>
  <build_depend>ecl_config</build_depend>
  <build_depend>ecl_errors</build_depend>
</package>


