<?xml version="1.0"?>
<package>
  <name>ecl_time_lite</name>
  <version>0.50.1</version>
  <description>
     Provides a portable set of time functions that are especially useful for 
     porting other code or being wrapped by higher level c++ classes.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/ecl_time_lite</url>
  <url type="repository">https://github.com/stonier/ecl_lite</url>
  <url type="bugtracker">https://github.com/stonier/ecl_lite/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author> -->

  <build_depend>catkin</build_depend>
  <build_depend>ecl_license</build_depend>
  <build_depend>ecl_build</build_depend>
  <build_depend>ecl_config</build_depend>
  <build_depend>ecl_errors</build_depend>
</package>


